--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -1,4 +1,5 @@
 {
+  "Users":"Usuários",
   "(and :count more error)": "(e mais :count erro)",
   "(and :count more errors)": "(e mais :count erros)",
   "A fresh verification link has been sent to your email address.": "Um novo link de verificação foi enviado para seu e-mail",
